Fix crash in QPaintedTextureImage when never calling repaint()

When creating a QPaintedTextureImage without calling repaint() nor
resizing, Qt 3D crashes because there is not generator created.

Even though it is not a normal use case, avoid crashing, by creating an
empty generator in the constructor.

Fixes: QTBUG-122613
Pick-to: 6.6 6.7
Change-Id: Iac5abd7d728330c5fa28e3de49a1e7ff261ace3f
Reviewed-by: Paul Lemire <paul.lemire@kdab.com>